--- a/progetto-prova/src/components/header/header.component.html
+++ b/progetto-prova/src/components/header/header.component.html
@@ -14,6 +14,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-nav-right">
         <li class="dropdown">
+<!--          non capisco come questo button al prof stia a sinistra se abbiamo scritto le stesse cose -->
           <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Save data</a></li>
