--- a/progetto-prova/src/app/app.component.html
+++ b/progetto-prova/src/app/app.component.html
@@ -26,12 +26,12 @@
 <!--  <br>-->
 <!--</div>-->
 
-<header></header>
+<header-my (featureSelected) = "onNavigate($event)" ></header-my>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+        <app-recipes *ngIf="loadedFeature === 'recipes'"></app-recipes>
+        <app-shopping-list *ngIf="loadedFeature !== 'recipe'"></app-shopping-list>
     </div>
   </div>
 </div>
