--- a/progetto-prova/src/components/header/header.component.html
+++ b/progetto-prova/src/components/header/header.component.html
@@ -9,13 +9,13 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#">Recipes</a></li>
-        <li><a href="#">Shopping List</a></li>
+        <li><a href="#" (click)="onSelect('recipes')"  >Recipes</a></li>
+        <li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-nav-right">
         <li class="dropdown">
 <!--          non capisco come questo button al prof stia a sinistra se abbiamo scritto le stesse cose -->
-          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+          <a  href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Save data</a></li>
            <li><a href="#">Fetch Data</a></li>
