Aggiunta una direttiva per mostrare la lista di un menu

--- a/progetto-prova/src/components/header/header.component.html
+++ b/progetto-prova/src/components/header/header.component.html
@@ -13,7 +13,7 @@
         <li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-nav-right">
-        <li class="dropdown">
+        <li class="dropdown" appDropdown>
 <!--          non capisco come questo button al prof stia a sinistra se abbiamo scritto le stesse cose -->
           <a  href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
