--- a/progetto-prova/src/components/shopping-list/shopping-list.component.html
+++ b/progetto-prova/src/components/shopping-list/shopping-list.component.html
@@ -1,7 +1,6 @@
 <div class="row">
   <div class="col-xs-10">
     <app-shopping-edit
-    (ingredientAdded) ="onIngridientAdded($event)"
     ></app-shopping-edit>
     <hr>
     <ul class="list-group">
@@ -9,6 +8,7 @@
         class="list-group-item"
         style="cursor: pointer"
         *ngFor="let ingredient of ingredients"
+        (click)="shoppingService.removeIngredient(ingredient)"
       >
         {{ ingredient.name }} ({{ ingredient.amount }})
       </a>
