--- a/progetto-prova/src/app/app.component.html
+++ b/progetto-prova/src/app/app.component.html
@@ -30,8 +30,9 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-        <app-recipes *ngIf="loadedFeature === 'recipes'"></app-recipes>
-        <app-shopping-list *ngIf="loadedFeature !== 'recipe'"></app-shopping-list>
+        <router-outlet></router-outlet>
+        <!-- <app-recipes *ngIf="loadedFeature === 'recipes'"></app-recipes>
+        <app-shopping-list *ngIf="loadedFeature !== 'recipe'"></app-shopping-list> -->
     </div>
   </div>
 </div>
